--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
 <body>
     <header>
         <h1>Minha página</h1>
-        <p>Oferecemos produtos e serviços</p>
+        <p>Oferecemos produtos e serviços</p><br>
     </header>
-    
+
+    <nav>
+        <ul>
+            <li>Serviços</li>
+            <li>Clientes</li>
+            <li>Parceiros</li>
+            <li>Time</li>
+            <li>Contato</li>
+        </ul>
+    </nav>
+    <section id="serviços">
+        <h2>Serviços</h2>
+        <p>Oferecemos os melhores serviços</p>
+        <img src="img\cliente1.jpeg" alt="Posso ajudar ?" width="300">
+    </section>
+    <section id="clientes">
+        <h2>Clientes</h2>
+        <p>Nossos clientes estão encantados</p>
+    </section>
+
     <footer>Desenvolvido por Lucas</footer>
 </body>
 </html>
