site com imagens e seções

--- a/index.html
+++ b/index.html
@@ -9,21 +9,43 @@
 
     <nav>
         <ul>
-            <li>Serviços</li>
-            <li>Clientes</li>
-            <li>Parceiros</li>
-            <li>Time</li>
-            <li>Contato</li>
+            <li><a href="#servicos">Serviços</a></li>
+            <li><a href="#clientes">Clientes</a></li>
+            <li><a href="#parceiros">Parceiros</a></li>
+            <li><a href="#time">Time</a></li>
+            <li><a href="#contato">Contato</a></li>
         </ul>
     </nav>
-    <section id="serviços">
+    <section id="servicos">
         <h2>Serviços</h2>
+        <img src="img\app.jpeg" alt="Posso ajudar ?" width="300">
         <p>Oferecemos os melhores serviços</p>
-        <img src="img\cliente1.jpeg" alt="Posso ajudar ?" width="300">
+        <img src="img/site.jpeg" alt="" width="300">
     </section>
     <section id="clientes">
         <h2>Clientes</h2>
+        <img src="img/cliente1.jpeg" width="300">
         <p>Nossos clientes estão encantados</p>
+        <img src="img/cliente2.jpeg" width="300">
+    </section>
+    <section id=parceiros>
+        <h2>Parceiros</h2>
+        <img src="img/parceiro1.jpeg" alt="">
+        <p>Nossos parceiros nos ajudam a entregar as melhores soluções para nossos clientes</p>
+        <img src="img/parceiro2.jpeg" alt="">
+    </section>
+    <section id=time>
+        <h2>Time</h2>
+        <img src="img/time1.jpeg" alt="">
+        <p>Nosso time trabalha com muita qualidade e empenho para entregar o melhor produto para nossos clientes</p>
+        <img src="img/time2.jpeg" alt="">
+    </section>
+    <section id=contato>
+        <h2>Contato</h2>
+        <img src="img/contato1.jpeg" alt="">
+        <p></p>
+        <img src="img/contato2.jpeg" alt="">
+
     </section>
 
     <footer>Desenvolvido por Lucas</footer>
