site só com html concluído

--- a/index.html
+++ b/index.html
@@ -30,21 +30,24 @@
     </section>
     <section id=parceiros>
         <h2>Parceiros</h2>
-        <img src="img/parceiro1.jpeg" alt="">
+        <a href="https://beerorcoffee.com/coworking/space/global-labs--araraquara" target="_blank">
+        <img src="img/parceiro1.jpeg" width="300" alt=""></a>
         <p>Nossos parceiros nos ajudam a entregar as melhores soluções para nossos clientes</p>
-        <img src="img/parceiro2.jpeg" alt="">
+        <a href='https://web.digitalinnovation.one/home' target="_blank">
+            <img src="img/parceiro2.jpeg" width="300" alt=""></a>
     </section>
     <section id=time>
         <h2>Time</h2>
-        <img src="img/time1.jpeg" alt="">
+        <img src="img/time1.jpeg" width="300" alt="">
         <p>Nosso time trabalha com muita qualidade e empenho para entregar o melhor produto para nossos clientes</p>
-        <img src="img/time2.jpeg" alt="">
+        <img src="img/time2.jpeg" width="300" alt="">
     </section>
     <section id=contato>
         <h2>Contato</h2>
-        <img src="img/contato1.jpeg" alt="">
-        <p></p>
-        <img src="img/contato2.jpeg" alt="">
+        <p>Entre em contato com nossa empresa</p>
+        <img src="img/contato1.jpeg" width="40" alt="">
+        <a href="mailto:contato@empresa.com">contato@empresa.com</a><br><br>
+        <img src="img/contato2.jpeg" width="300" alt="">
 
     </section>
 
