--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head><meta charset="UTF-8"><title>Minha página</title></head>
+<head>
+    <meta charset="UTF-8"><title>Minha página</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
     <header>
         <h1>Minha página</h1>
@@ -18,36 +21,38 @@
     </nav>
     <section id="servicos">
         <h2>Serviços</h2>
-        <img src="img\app.jpeg" alt="Posso ajudar ?" width="300">
-        <p>Oferecemos os melhores serviços</p>
-        <img src="img/site.jpeg" alt="" width="300">
+        <img src="img\app.jpeg" alt="Posso ajudar ?" class="img_padrao">
+        <p>Oferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviçosOferecemos os melhores serviços</p>
+        <img src="img/site.jpeg" alt="" class="img_padrao">
     </section>
     <section id="clientes">
         <h2>Clientes</h2>
-        <img src="img/cliente1.jpeg" width="300">
+        <img src="img/cliente1.jpeg" class="img_padrao">
         <p>Nossos clientes estão encantados</p>
-        <img src="img/cliente2.jpeg" width="300">
+        <img src="img/cliente2.jpeg" class="img_padrao">
     </section>
     <section id=parceiros>
         <h2>Parceiros</h2>
         <a href="https://beerorcoffee.com/coworking/space/global-labs--araraquara" target="_blank">
-        <img src="img/parceiro1.jpeg" width="300" alt=""></a>
+        <img src="img/parceiro1.jpeg" class="img_padrao" alt=""></a>
         <p>Nossos parceiros nos ajudam a entregar as melhores soluções para nossos clientes</p>
         <a href='https://web.digitalinnovation.one/home' target="_blank">
-            <img src="img/parceiro2.jpeg" width="300" alt=""></a>
+            <img src="img/parceiro2.jpeg" class="img_padrao" alt=""></a>
     </section>
     <section id=time>
         <h2>Time</h2>
-        <img src="img/time1.jpeg" width="300" alt="">
+        <img src="img/time1.jpeg" class="img_padrao" alt="">
         <p>Nosso time trabalha com muita qualidade e empenho para entregar o melhor produto para nossos clientes</p>
-        <img src="img/time2.jpeg" width="300" alt="">
+        <img src="img/time2.jpeg" class="img_padrao" alt="">
     </section>
     <section id=contato>
         <h2>Contato</h2>
         <p>Entre em contato com nossa empresa</p>
-        <img src="img/contato1.jpeg" width="40" alt="">
-        <a href="mailto:contato@empresa.com">contato@empresa.com</a><br><br>
-        <img src="img/contato2.jpeg" width="300" alt="">
+        <p>
+            <img src="img/contato1.jpeg" class="logo" alt="">
+            <a href="mailto:contato@empresa.com">contato@empresa.com</a>
+        </p>
+        <p><img src="img/contato2.jpeg" class="logo" alt="">(99)99999-9999</p>
 
     </section>
 
