--- a/cursos avançados da DIO/index.html
+++ b/cursos avançados da DIO/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Página do Instagram</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <H1>Hello World</H1>
+    <h1>Hello World</h1>
 </body>
 </html>
