--- a/cursos avançados da DIO/clone da netflix/index.html
+++ b/cursos avançados da DIO/clone da netflix/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DIO - Clone da Netflix</title>
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl.theme.default.min.css">
+    <link rel="stylesheet" href="style/responsive.css">
 </head>
 <body>
-    Hello World!
+    <header>
+        <div class="container">
+        <h2 class="logo">NETFLIX</h2>
+            <nav>
+                <a href="#">Início</a>
+                <a href="#">Séries</a>
+                <a href="#">Filmes</a>
+                <a href="#">Documentários</a>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">HOUSE OF CARDS</h3>
+                <p class="descricao">Traído pela Casa Branca, o congressista Frank Underwood embarca em uma jornada implacável para chegar ao poder. Chantagem, sedução e ambição são suas maiores armas.</p>
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        <i class="fas fa-play"></i>ASSISTIR AGORA
+                    </button>
+                    <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i>MAIS INFORMAÇÕES
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <div class="carrousel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="box-filmes item"><img src="img/min1.jpg" alt="filme1"></div>
+            <div class="box-filmes item"><img src="img/min2.jpg" alt="filme2"></div>
+            <div class="box-filmes item"><img src="img/min3.jpg" alt="filme3"></div>
+            <div class="box-filmes item"><img src="img/min4.jpg" alt="filme4"></div>
+            <div class="box-filmes item"><img src="img/min5.jpg" alt="filme5"></div>
+            <div class="box-filmes item"><img src="img/min6.jpg" alt="filme6"></div>
+            <div class="box-filmes item"><img src="img/min7.jpg" alt="filme7"></div>
+            <div class="box-filmes item"><img src="img/min8.jpg" alt="filme8"></div>
+            <div class="box-filmes item"><img src="img/min9.jpg" alt="filme9"></div>
+        </div>
+    </div>
+    
+
 </body>
+<script src="https://kit.fontawesome.com/f0c75a25c1.js" crossorigin="anonymous"></script>
+<script src="js/owl/jquery.min.js"></script>
+<script src="js/owl/owl.carousel.min.js"></script>
+<script src="js/owl/setup.js"></script>
 </html>
